--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       content="A photo album app that allows users to share their photos in public"
     />
     <title>Photo Album - By Samer A. 🚀</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
